--- a/Simple Decision Rules Give High Accuracy for Detecting Social Bots on Benchmark Datasets.ipynb
+++ b/Simple Decision Rules Give High Accuracy for Detecting Social Bots on Benchmark Datasets.ipynb
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-25T14:00:26.476153Z",
@@ -847,60 +847,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-------------- DECISION TREE --------------\n",
+      "Starting train_test_fit_and_score at 1654372639.5197766\n",
+      "|--- friends_count <= 8.50\n",
+      "|   |--- favourites_count <= 70.00\n",
+      "|   |   |--- time_zone_Atlantic Time (Canada) <= 0.50\n",
+      "|   |   |   |--- weights: [0.00, 18.00] class: 1.0\n",
+      "|   |   |--- time_zone_Atlantic Time (Canada) >  0.50\n",
+      "|   |   |   |--- weights: [1.00, 0.00] class: 0.0\n",
+      "|   |--- favourites_count >  70.00\n",
+      "|   |   |--- time_zone_Mumbai <= 0.50\n",
+      "|   |   |   |--- weights: [2.00, 0.00] class: 0.0\n",
+      "|   |   |--- time_zone_Mumbai >  0.50\n",
+      "|   |   |   |--- weights: [0.00, 1.00] class: 1.0\n",
+      "|--- friends_count >  8.50\n",
+      "|   |--- friends_count <= 5276.00\n",
+      "|   |   |--- statuses_count <= 16.00\n",
+      "|   |   |   |--- weights: [7.00, 11.00] class: 1.0\n",
+      "|   |   |--- statuses_count >  16.00\n",
+      "|   |   |   |--- weights: [235.00, 36.00] class: 0.0\n",
+      "|   |--- friends_count >  5276.00\n",
+      "|   |   |--- created_at <= 1343924288.00\n",
+      "|   |   |   |--- weights: [12.00, 4.00] class: 0.0\n",
+      "|   |   |--- created_at >  1343924288.00\n",
+      "|   |   |   |--- weights: [9.00, 27.00] class: 1.0\n",
+      "\n",
+      "Accuracy: 0.7564102564102564\n",
+      "Precision 0.5588235294117647\n",
+      "Recall: 0.4523809523809524\n",
+      "F1: 0.5\n",
+      "Finished train_test_fit_and_score at 1654372639.569589. Execution time: 0.04981231689453125 s\n",
       "-------------- RANDOM FOREST --------------\n",
-      "Accuracy score: 0.8397435897435898\n",
-      "Precision score: 0.8823529411764706\n",
-      "Recall score: 0.39473684210526316\n",
-      "F1 score: 0.5454545454545454\n",
-      "Starting kfold_cv at 1654371624.5145698\n",
+      "Accuracy score: 0.8269230769230769\n",
+      "Precision score: 0.7142857142857143\n",
+      "Recall score: 0.4166666666666667\n",
+      "F1 score: 0.5263157894736842\n",
+      "Starting kfold_cv at 1654372639.8360188\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654371624.6266186. Execution time: 0.11204886436462402 s\n",
-      "Starting kfold_cv at 1654371624.6268198\n",
-      "Fold 0 in progress\n",
-      "Fold 1 in progress\n",
-      "Fold 2 in progress\n",
-      "Fold 3 in progress\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/software/anaconda3/2020.11/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654371624.7434242. Execution time: 0.11660432815551758 s\n",
-      "Starting kfold_cv at 1654371624.7436247\n",
+      "Finished kfold_cv at 1654372639.9475067. Execution time: 0.11148786544799805 s\n",
+      "Starting kfold_cv at 1654372639.9477093\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654371624.8634555. Execution time: 0.11983084678649902 s\n",
-      "Starting kfold_cv at 1654371624.8636575\n",
+      "Finished kfold_cv at 1654372640.0948613. Execution time: 0.14715194702148438 s\n",
+      "Starting kfold_cv at 1654372640.0949395\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654371624.9869518. Execution time: 0.12329435348510742 s\n",
-      "Starting kfold_cv at 1654371624.98716\n",
+      "Finished kfold_cv at 1654372640.2319367. Execution time: 0.13699722290039062 s\n",
+      "Starting kfold_cv at 1654372640.2319858\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654371625.1150517. Execution time: 0.12789177894592285 s\n"
+      "Finished kfold_cv at 1654372640.357075. Execution time: 0.12508916854858398 s\n",
+      "Starting kfold_cv at 1654372640.3572934\n",
+      "Fold 0 in progress\n",
+      "Fold 1 in progress\n",
+      "Fold 2 in progress\n",
+      "Fold 3 in progress\n",
+      "Fold 4 in progress\n",
+      "Finished kfold_cv at 1654372640.4836357. Execution time: 0.1263422966003418 s\n"
      ]
     }
    ],
@@ -910,7 +926,7 @@
     "    profs = extract_users(data_path)\n",
     "    df, one_hot, labels = preprocess_users(profs, labels_path)\n",
     "    # Fit and score on decision tree\n",
-    "#     print(\"-------------- DECISION TREE --------------\")\n",
+    "    print(\"-------------- DECISION TREE --------------\")\n",
     "#     dt_clf, *_ = fit_and_score(one_hot, labels, depth=depth)\n",
     "# #    plot_metrics(one_hot, labels, soa_accuracy=soa_accuracy, soa_precision=soa_precision, soa_recall=soa_recall)\n",
     "#     humans = len([lab for lab in labels if lab == 0])\n",
@@ -918,7 +934,7 @@
     "#     print(humans, bots)\n",
     "#     # Fit and score on decision tree\n",
     "#     print(\"-------------- DECISION TREE TRAIN/TEST SPLIT --------------\")\n",
-    "    #train_test_fit_and_score(one_hot, labels, depth=depth)\n",
+    "    train_test_fit_and_score(one_hot, labels, depth=depth)\n",
     "#     # Fit and score on random forest\n",
     "    print(\"-------------- RANDOM FOREST --------------\")\n",
     "    train, test, train_labels, test_labels = train_test_split(one_hot, labels, test_size=0.3)\n",
@@ -943,56 +959,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0714193962748875"
+       "[[0.7708364451082899,\n",
+       "  0.8414285714285714,\n",
+       "  0.1765229885057471,\n",
+       "  0.28911137805464837],\n",
+       " [0.7417102315160568,\n",
+       "  0.6273809523809524,\n",
+       "  0.26428104575163397,\n",
+       "  0.3346026410448766],\n",
+       " [0.7976848394324123,\n",
+       "  0.6888969154913427,\n",
+       "  0.4743781512605042,\n",
+       "  0.554959683921948],\n",
+       " [0.7919529499626587,\n",
+       "  0.6407429058579953,\n",
+       "  0.4803030303030303,\n",
+       "  0.5434845750187537],\n",
+       " [0.7744772218073189,\n",
+       "  0.5945170312410293,\n",
+       "  0.5282417582417582,\n",
+       "  0.5541079610045128]]"
       ]
      },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy = calculate_accuracy(0.84, 0.7, 139, 380)\n",
-    "accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0.7360156833457804,\n",
-       "  0.49523809523809526,\n",
-       "  0.07080026455026454,\n",
-       "  0.12217406260749915],\n",
-       " [0.7514189693801344,\n",
-       "  0.7785714285714286,\n",
-       "  0.21311734242768726,\n",
-       "  0.2934439204600495],\n",
-       " [0.7823749066467514,\n",
-       "  0.6516724941724942,\n",
-       "  0.44072606553865923,\n",
-       "  0.5152985767076494],\n",
-       " [0.7977781926811053,\n",
-       "  0.6645959258133172,\n",
-       "  0.5225571504518872,\n",
-       "  0.5633106311489369],\n",
-       " [0.7919902912621359,\n",
-       "  0.6626587301587301,\n",
-       "  0.46761118830084347,\n",
-       "  0.5470020964360587]]"
-      ]
-     },
-     "execution_count": 56,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
