--- a/SDR-pairs.ipynb
+++ b/SDR-pairs.ipynb
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 1287,
-   "id": "099968b1",
+   "id": "04618086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 1382,
-   "id": "5d4c801e",
+   "id": "25b35805",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1472,
+   "execution_count": 1710,
    "id": "8bd764ac",
    "metadata": {},
    "outputs": [
@@ -812,6 +812,12 @@
     }
    ],
    "source": [
+    "\n",
+    "importlib.reload(sys.modules['data_accessor'])\n",
+    "\n",
+    "from print_table import print_leave_one_out_table, print_single_dataset_score_table, get_max_score\n",
+    "\n",
+    "\n",
     "scores = {\n",
     "    'twibot-2020': twibot_scores, \n",
     "    'botometer-feedback-2019': botometer_feedback_scores, \n",
@@ -961,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1477,
+   "execution_count": 1703,
    "id": "e9f9b6e3",
    "metadata": {},
    "outputs": [],
@@ -978,21 +984,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1478,
+   "execution_count": 1704,
    "id": "f54e706b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "twibot-2020 & 0.45/0.18 & 1 \\\\\n",
-      "botometer-feedback-2019 & 0.65/0.41 & 1 \\\\\n",
-      "cresci-rtbust-2019 & 0.54/0.37 & 1 \\\\\n",
-      "gilani-2017 & 0.56/0.14 & 1 \\\\\n",
+      "twibot-2020 & 0.44/0.17 & 1 \\\\\n",
+      "botometer-feedback-2019 & 0.62/0.37 & 1 \\\\\n",
+      "cresci-rtbust-2019 & 0.54/0.36 & 1 \\\\\n",
+      "gilani-2017 & 0.56/0.11 & 1 \\\\\n",
       "cresci-2017 & 0.77/0.84 & 1 \\\\\n",
       "cresci-2015 & 0.91/0.94 & 1 \\\\\n",
-      "cresci-stock-2018 & 0.65/0.66 & 1 \\\\\n",
+      "cresci-stock-2018 & 0.66/0.65 & 1 \\\\\n",
       "yang-2013 & 0.32/0.21 & 1 \\\\\n"
      ]
     }
@@ -1043,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 1508,
-   "id": "09957129",
+   "id": "cd4bf976",
    "metadata": {
     "scrolled": true
    },
@@ -1101,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 1509,
-   "id": "4c3d5d8c",
+   "id": "33ab2c6c",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 1615,
-   "id": "f874c8dc",
+   "id": "523f1774",
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1603,
-   "id": "4468c5f7",
+   "id": "4998596d",
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 1512,
-   "id": "1d69b622",
+   "id": "8a32fbb8",
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 1513,
-   "id": "aab667b0",
+   "id": "5b65ac56",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": 1514,
-   "id": "9991c486",
+   "id": "8dac2d79",
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 1540,
-   "id": "46d75c04",
+   "id": "bfd329d0",
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 1541,
-   "id": "5f1d5a9a",
+   "id": "be13ae02",
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 1549,
-   "id": "f971a4fb",
+   "id": "faf8e696",
    "metadata": {
     "scrolled": true
    },
@@ -1981,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": 1550,
-   "id": "ca27c70b",
+   "id": "68ae70be",
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2066,7 @@
   {
    "cell_type": "code",
    "execution_count": 1626,
-   "id": "d4eb3ccd",
+   "id": "05e5b869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2897,7 +2905,7 @@
   {
    "cell_type": "code",
    "execution_count": 1682,
-   "id": "865c069b",
+   "id": "401d215c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2919,7 +2927,7 @@
   {
    "cell_type": "code",
    "execution_count": 1684,
-   "id": "93adac21",
+   "id": "b14688f4",
    "metadata": {},
    "outputs": [
     {
@@ -3041,7 +3049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65468af8",
+   "id": "d859594c",
    "metadata": {},
    "source": [
     "## Testing on held-out set"
@@ -3050,7 +3058,7 @@
   {
    "cell_type": "code",
    "execution_count": 1689,
-   "id": "632e80a3",
+   "id": "fe15943b",
    "metadata": {},
    "outputs": [
     {
@@ -3080,7 +3088,7 @@
   {
    "cell_type": "code",
    "execution_count": 1690,
-   "id": "1f24cb64",
+   "id": "bdcdd5cf",
    "metadata": {},
    "outputs": [
     {
@@ -3107,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 1691,
-   "id": "66ab0a59",
+   "id": "d95c4742",
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3142,7 @@
   {
    "cell_type": "code",
    "execution_count": 1692,
-   "id": "bb8e1888",
+   "id": "b0b1dc5b",
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3169,7 @@
   {
    "cell_type": "code",
    "execution_count": 1693,
-   "id": "97ed78e0",
+   "id": "b4f495da",
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3190,7 @@
   {
    "cell_type": "code",
    "execution_count": 1694,
-   "id": "6dd52893",
+   "id": "273d0e3d",
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3211,7 @@
   {
    "cell_type": "code",
    "execution_count": 1695,
-   "id": "9e5fc78a",
+   "id": "e1e64c34",
    "metadata": {},
    "outputs": [
     {
@@ -3224,7 +3232,7 @@
   {
    "cell_type": "code",
    "execution_count": 1696,
-   "id": "595d5d6a",
+   "id": "9864c070",
    "metadata": {},
    "outputs": [
     {
@@ -3245,7 +3253,7 @@
   {
    "cell_type": "code",
    "execution_count": 1697,
-   "id": "b063f8a3",
+   "id": "f9649a88",
    "metadata": {},
    "outputs": [
     {
@@ -3267,7 +3275,7 @@
   {
    "cell_type": "code",
    "execution_count": 1698,
-   "id": "34e241c3",
+   "id": "28f588e4",
    "metadata": {},
    "outputs": [
     {
@@ -3288,7 +3296,7 @@
   {
    "cell_type": "code",
    "execution_count": 1699,
-   "id": "4060d598",
+   "id": "ae57d7ed",
    "metadata": {},
    "outputs": [
     {
@@ -3309,7 +3317,7 @@
   {
    "cell_type": "code",
    "execution_count": 1700,
-   "id": "fe79349c",
+   "id": "34097f59",
    "metadata": {},
    "outputs": [
     {
