--- a/Simplistic Collection and Labeling Practices Limit the Generalizability of Benchmark Datasets for Twitter Bot Detection.ipynb
+++ b/Simplistic Collection and Labeling Practices Limit the Generalizability of Benchmark Datasets for Twitter Bot Detection.ipynb
@@ -5,7 +5,7 @@
    "id": "58e0d721",
    "metadata": {},
    "source": [
-    "# Simple decision rules give high performance for detecting social bots on benchmark datasets\n",
+    "# Simplistic Collection and Labeling Practices Limit the Generalizability of Benchmark Datasets for Twitter Bot Detection\n",
     "\n",
     "Analysis of benchmark datasets for bot detection."
    ]
@@ -68,7 +68,6 @@
    ],
    "source": [
     "from data_accessor import load_twibot, load_dataset, load_cresci, load_cresci2017, load_cresci2015, load_caverlee, load_pan19, load_cresci2017_tweets, load_cresci2015_tweets, load_midterm, load_gilani_derived_bands, load_yang, load_yang_tweets, load_cresci_stock_tweets, tweets_to_countvectorized_df, load_spammers, get_intraclass_labels, load_human_dataset_list, load_fake_followers, load_other_bots, get_shared_cols\n",
-    "from ensemble import get_ensemble_of_classifiers\n",
     "from fit_and_score import fit, score, fit_and_score, kfold_cv, analyze_dataset, train_test_fit_and_score, train_test_fit_and_score_clf, nonnumeric, plot_metrics, calculate_accuracy, analyze_twibot\n",
     "from leave_one_dataset_out import leave_dataset_out, leave_dataset_out_botometer\n",
     "from plotting import heatmap_train_on_one_test_on_another, process_tick_label\n",
@@ -497,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ea87fe1f",
+   "id": "ac73ca07",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "090cc08e",
+   "id": "19cf502d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "9733b5d6",
+   "id": "1aec587c",
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "d319e477",
+   "id": "c2fbff8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2520,7 +2519,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "d7f37a32",
+   "id": "d49a0337",
    "metadata": {
     "collapsed": true
    },
@@ -2559,7 +2558,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "0690d909",
+   "id": "ca6db6bc",
    "metadata": {
     "collapsed": true
    },
